Change image paths in decision_trees.tex
Updated image paths to reference the 'Images' directory.

--- a/D5/decision_trees.tex
+++ b/D5/decision_trees.tex
@@ -20,7 +20,7 @@ One of the primary advantages of this model is the ability to visualize the deci
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.0\textwidth]{DTree.png}
+    \includegraphics[width=1.0\textwidth]{Images/DTree.png}
     \caption{Business Rules Tree (Buyer Profile)}
     \label{fig:dtree_viz}
 \end{figure}
@@ -38,7 +38,7 @@ Figure \ref{fig:dtree_imp} confirms what drives these decisions.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{influentialVariablesDTree.png}
+    \includegraphics[width=0.8\textwidth]{Images/influentialVariablesDTree.png}
     \caption{Top Influential Variables (Gini Importance)}
     \label{fig:dtree_imp}
 \end{figure}
@@ -53,7 +53,7 @@ To visualize how the model separates the classes, we plotted the decision surfac
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{heatmapDTree.png}
+    \includegraphics[width=0.8\textwidth]{Images/heatmapDTree.png}
     \caption{Decision Tree Boundary (Rectangular Splits)}
     \label{fig:dtree_bound}
 \end{figure}
